--- a/style.css
+++ b/style.css
@@ -467,9 +467,8 @@ transition: 0.3s ease-in-out;
 .projects-box{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  place-items: center;
-  gap: 3rem;
-  row-gap: 5rem;
+  gap: 2.5rem;
+  padding: 2.5rem 0;
 }
 .project-card{
   display: flex;
@@ -480,12 +479,15 @@ transition: 0.3s ease-in-out;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
   border-radius: 3rem;
-  gap: 2rem;
-   padding: 5rem 2rem;
-   overflow: hidden;
-   cursor: pointer;
-   box-shadow: 0 0 5px var(--main-color);
-   transition: 0.3s ease;
+  gap: 1.5rem;
+  padding: 2.5rem 1.4rem 2rem 1.4rem;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 0 5px var(--main-color);
+  transition: 0.3s ease;
+  width: 100%;
+  max-width: 550px;
+  min-height: 430px;
 }
 .project-card:hover{
   box-shadow: 0 0 25px var(--main-color),
@@ -493,15 +495,15 @@ transition: 0.3s ease-in-out;
   transform: scale(1.02);
 }
 .project-card img{
-  max-width: 300px;
+  width: 500px;
   border-radius: 2rem;
   object-fit: cover;
 }
 .project-card h3{
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 .project-card p{
-  font-size: 1.6re,;
+  font-size: 1.2rem;
 }
 
 .contact{
